# superfast

./: Cargo.toml  LICENSE  README.md
examples/: benchmark.rs  demo.rs  schema.xml
spec/: FAST-Specification-1-x-1.md  FAST.md
src/: context.rs  decimal.rs  decoder.rs  definitions.rs  encoder.rs  errors.rs  instruction.rs  lib.rs  pmap.rs  reader.rs  stacked.rs  template.rs  types.rs  value.rs  writer.rs
src/model/: decimal.rs  mod.rs  serialize.rs  template.rs  value.rs
src/tests/: bug.rs  copy_strict.rs  cross_template.rs  decimal.rs  decimal_parts.rs  field_tests.rs  mod.rs  nullable_d6.rs  operator_strict.rs  operators.rs  pmap.rs  reader.rs  spec_minimal.rs  structural.rs  writer.rs
tests/: send_sync.rs
